After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 771163 - Don't allow book marking 'Other Locations'
Don't allow book marking 'Other Locations'
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Bookmarks
3.21.x
Other Linux
: Normal minor
: 3.22
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-09-10 08:13 UTC by Mohammed Sadiq
Modified: 2016-09-21 08:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
disable bookmark on 'Other Locations' [patch] (3.60 KB, patch)
2016-09-21 03:08 UTC, Mohammed Sadiq
committed Details | Review

Description Mohammed Sadiq 2016-09-10 08:13:33 UTC
Other Locations is already present in sidebar. So the user should better not allowed to bookmark Other locations.

How to reproduce:
1. Open Nautilus -> Other locations
2. Open menu [F10]
3. Click 'Bookmark this location' adds Other locations to sidebar.
Comment 1 Mohammed Sadiq 2016-09-21 03:08:05 UTC
Created attachment 335961 [details] [review]
disable bookmark on 'Other Locations' [patch]

'Other locations' is already listed in the sidebar. So there is no
need for allowing the user to bookmark 'Other Locations'.

This commit makes the bookmark button in toolbar insensitive for
'Other Locations'.
Comment 2 Carlos Soriano 2016-09-21 07:55:32 UTC
Review of attachment 335961 [details] [review]:

Nice! I'm quite surprised you got the code perfect at once.
LGTM, thanks! 

Do you have commit rights?
Comment 3 Mohammed Sadiq 2016-09-21 08:12:50 UTC
(In reply to Carlos Soriano from comment #2)
> Review of attachment 335961 [details] [review] [review]:
> 
> Nice! I'm quite surprised you got the code perfect at once.
> LGTM, thanks! 
>

Thanks :)
Though I struggled a bit hard to keep up with the style (My editor is highly configured for GNU styled code)

> Do you have commit rights?
No. Please commit yourself
Comment 4 Carlos Soriano 2016-09-21 08:18:01 UTC
(In reply to Mohammed Sadiq from comment #3)
> (In reply to Carlos Soriano from comment #2)
> > Review of attachment 335961 [details] [review] [review] [review]:
> > 
> > Nice! I'm quite surprised you got the code perfect at once.
> > LGTM, thanks! 
> >
> 
> Thanks :)
> Though I struggled a bit hard to keep up with the style (My editor is highly
> configured for GNU styled code)
> 

Oh you missed the good old times when we had 3 code styles, being the most predominant tabs of 8 spaces and completely different than GNU style :D.

In any case, you have the style in /data/uncrustify.cfg using the uncrustify tool. You can even run it yourself to make sure your code is following the style.

> > Do you have commit rights?
> No. Please commit yourself

Ok
Comment 5 Carlos Soriano 2016-09-21 08:26:38 UTC
The following fixes have been pushed:
Comment 6 Carlos Soriano 2016-09-21 08:32:07 UTC
git bz failed me, so here's the link https://git.gnome.org/browse/nautilus/commit/?id=3c8d450cd61a891a84fb4b2c06f4cc6a806a260d