nautilus-toolbar: disable bookmark on 'Other Locations'

'Other locations' is already listed in the sidebar. So there is no
need for allowing the user to bookmark 'Other Locations'.

This commit makes the bookmark button in toolbar insensitive for
'Other Locations'.

https://bugzilla.gnome.org/show_bug.cgi?id=771163